--- a/webapi.html
+++ b/webapi.html
@@ -52,7 +52,7 @@
                     <h2>${shop.name}</h2>
                     <p>住所 ${shop.address}</p>
                     <p><a href = "${shop.urls.pc}" target="_blank">店舗情報を見る</a></p>
-                    <p>画像</p>
+                    <img src="${shop.photo.pc.l}" alt="${shop.name}"/>
                     <hr>
                     `;
                     resultsDiv.appendChild(shopDiv);
